First commit - toning down the taglines

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
         <section id="hero" class="py-20 sm:py-24 lg:py-32 bg-white">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8 text-center">
                 <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold tracking-tight text-slate-900">
-                    Hate Canvas? Love plain text?
+                    Have to use Canvas but want to write in plain text?
                 </h1>
                 <p class="mt-6 text-2xl sm:text-3xl font-bold tracking-tight text-teal-600">
-                    Do a Canversion.
+                    Undergo a Canversion.
                 </p>
                 <p class="mt-8 max-w-3xl mx-auto text-lg text-slate-600">
                     A command-line tool that automates the creation of course materials, letting you work in plain text and maintain a single source of truth for your entire course.
