First commit - toning down the taglines

--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@ input_sources:
     
     <footer class="bg-white border-t border-slate-200">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-sm text-slate-500">
-            <p>Canversion: A plain text-first course material generator.</p>
-            <p class="mt-2">Built to escape the tyranny of the text box.</p>
+            <p>Canversion: A plaintext-first course material generator.</p>
+            <p class="mt-2">Sick of WYSWYG? Yes, we Canversion.</p>
         </div>
     </footer>
 
